꼬맨틀 버그수정

--- a/core/templates/core/games/kkomantle.html
+++ b/core/templates/core/games/kkomantle.html
@@ -12,6 +12,7 @@
     <div class="header-box">
         <h1>🧩 꼬맨틀</h1>
         <p>오늘의 단어를 찾아보세요!</p>
+        <small id="statusText">AI와 연결되었습니다.</small>
     </div>
 
     <div id="successArea" class="success-modal">
