--- a/core/templates/core/games/wordle.html
+++ b/core/templates/core/games/wordle.html
@@ -33,8 +33,8 @@
         
         <input type="text" id="player-name" placeholder="Enter your name" maxlength="10">
         <div class="modal-btns">
-            <button onclick="submitScore()" class="btn-primary" id="btn-submit">랭킹 등록</button>
-            <button onclick="closeModal()" class="btn-secondary">다시 하기</button>
+            <button id="btn-submit" type="button" class="btn-primary">랭킹 등록</button>
+            <button id="close-modal-btn" type="button" class="btn-secondary">다시 하기</button>
         </div>
     </div>
 </div>
